@@ -1,3 +1,10 @@
+2003-12-25  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* win/tkWin32Dll.c (DllMain): Add HAVE_NO_SEH
+	blocks in place of __try and __except statements
+	to support gcc builds. This is needed after
+	David's changes on 2003-12-21. [Tcl patch 858493]
+
 2003-12-22  David Gravereaux <davygrvy@pobox.com>
 
 	* win/nmakehlp.c:
